[project]
name = "nba"
version = "0.1.0"
description = "nba data analysis"
authors = [
    {name = "Yuhao Huo", email = "martinyuhaohuo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_system"

[tool.setuptools]
packages = ["."]
